Fix spacing on mobile, add supported by pfs

--- a/pyconbalkan/core/static/css/components/page.css
+++ b/pyconbalkan/core/static/css/components/page.css
@@ -8,8 +8,9 @@
 
     @media (max-width: 1280px) {
         .page__content {
-            width: 100%;
+            width: 50%;
             height: auto;
-            margin: 0;
+            padding: 40px 0;
+            margin: 0 auto;
         }
     }
